--- a/style/dark.css
+++ b/style/dark.css
@@ -8,7 +8,29 @@ body {
     box-shadow: 0 8px 32px 0 rgba(29, 37, 150, 0.521);
     backdrop-filter: blur(13.5px);
     -webkit-backdrop-filter: blur(13.5px);
-    border: 1px solid rgba(255, 255, 255, 0.212);
+    /* border: 1px solid rgba(255, 255, 255, 0.212); */
+}
+
+#themeButton {
+    /* background-color: #9fe4ffbb; */
+    background-color: rgba(55, 5, 136, 0.377);
+    border: 2px solid gray;
+    box-shadow: 2px 2px 4px 0 rgba(102, 29, 150, 0.733);
+}
+
+#themeButton img {
+    width: 25px;
+    height: 25px;
+    filter: invert();
+    transition: all 0.4s ease-out 0s;
+}
+
+#themeButton:hover {
+    background-color: rgba(21, 3, 182, 0.507);
+}
+
+#themeButton:hover img {
+    transform: translate(-50%, -50%) scale(1.1);
 }
 
 #imagemVaporwave {
@@ -69,7 +91,8 @@ body {
 } */
 
 #imagemFundoHabilidades {
-    background: linear-gradient(135deg, rgb(255, 0, 255) 20%, rgb(29, 139, 190), cyan);
+    /* background: linear-gradient(135deg, rgb(255, 0, 255) 20%, rgb(29, 139, 190), cyan); */
+    background: linear-gradient(315deg, rgb(255, 0, 255) 20%, rgb(29, 139, 190), cyan);
 }
 
 #imagemFundoHabilidades {
@@ -95,6 +118,29 @@ body {
     color: white;
 }
 
+.infoHabilidade {
+    box-shadow: 10px 10px 16px 0 rgba(29, 106, 150, 0.301);
+    backdrop-filter: blur(13.5px);
+    filter: brightness(1.2) contrast(1.25) saturate(1.2);
+    -webkit-backdrop-filter: blur(13.5px) contrast(1.25) saturate(1.2);
+}
+
+.conteinerCertificadoUnico,
+tr,
+th,
+td {
+    border: 2px solid rgb(255, 255, 255);
+}
+
+td span,
+td a {
+    color: gold;
+}
+
+td a:hover {
+    color: #9fe4ffbb;
+}
+
 td #restApiImagem,
 #restApi img {
     filter: invert();
@@ -103,4 +149,34 @@ td #restApiImagem,
 td span {
     font-size: 12px;
     color: gold;
+}
+
+.projetos {
+    background-color: rgba(0, 0, 0, 0.137);
+}
+
+.campoProjetos .cadaProjeto {
+    background-color: rgba(0, 0, 0, 0.048);
+    box-shadow: 10px 10px 40px -5px rgba(21, 123, 182, 0.5);
+    border: 1px solid rgb(100, 100, 100);
+}
+
+.campoProjetos .cadaProjeto:hover img {
+    filter: drop-shadow(0px 0px 25px rgba(38, 176, 255, 0.534));
+}
+
+.cadaProjeto a {
+    color: white;
+}
+
+
+.cadaProjeto h2 {
+    text-shadow: 0px 0px 20px rgba(0, 255, 234, 0.733);
+    text-decoration: underline 3px;
+}
+
+.riscoDosProjetos {
+    background-image: linear-gradient(to right, transparent, #9fe4ffbb, transparent);
+    filter: drop-shadow(0px 0px 100px rgba(98, 156, 189, 0.658));
+    box-shadow: 0px 0px 15px rgba(98, 156, 189, 0.658);
 }
