--- a/style/allStyles.css
+++ b/style/allStyles.css
@@ -14,44 +14,12 @@ body {
     width: 100%;
 }
 
-#themeButton {
-    position: absolute;
-    /* left: calc(100% - 50px) ; */
-    padding: 4px 8px;
-    font-size: 14px;
-    outline: none;
-    border: none;
-    border-radius: 8px;
-    right: 30px;
-    top: 9px;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 40px;
-    height: 40px;
-    /* display: flex; */
-    justify-content: flex-end;
-    z-index: 1000;
-}
-
-#themeButton img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-
 .topo {
-    /* padding: 10px; */
     position: fixed;
-    z-index: 99;
+    z-index: 1000;
     width: 100%;
     height: 55px;
     display: flex;
-    /* padding: 0 30px 0px 30px; */
     align-items: center;
 }
 
@@ -67,74 +35,48 @@ body {
 }
 
 .navegacao a {
-    /* margin-top: 10px; */
     text-decoration: none;
     display: flex;
-    /* align-items: center; */
 }
 
-#imagemMinha {
-    max-width: 180px;
-    margin: 40px 40px 20px 0px;
-    border-radius: 50%;
-    animation: sobeDesce 1.05s infinite alternate;
+#themeButton {
+    position: absolute;
+    padding: 4px 8px;
+    font-size: 14px;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+    right: 30px;
+    top: 9px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    justify-content: flex-end;
+    z-index: 2;
 }
 
-@keyframes sobeDesce {
-    0% {
-        transform: translateY(20px);
-    }
-
-    /* 88% {
-        transform: translateY(10px);
-    } */
-    100% {
-        transform: translateY(-10px);
-    }
+#themeButton img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 .inicioImagem {
     overflow: hidden;
-    height: 100vh;
-    max-height: 100vh;
-    /* width: 100vw; */
-
-    /* margin-top: -7px; */
+    /* height: 100vh; */
 }
 
 .imagemDeFundo {
     display: flex;
     position: relative;
     z-index: -1;
-    height: 100vh;
-}
-
-.desfoco {
-    border-radius: 20px;
-    border: 1px solid rgba(255, 255, 255, 0.212);
-
-    /* backdrop-filter: blur(5px); */
-    z-index: 1;
-    position: absolute;
-    display: flex;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 70vw;
-    height: 450px;
-    margin: auto;
-    margin-top: 20vh;
-    padding: 10px;
-}
-
-.comeco {
-    /* height: 500px; */
-    /* display: contents; */
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    /* position: absolute; */
-    overflow: hidden;
+    /* height: 100vh; */
 }
 
 #imagemVaporwave,
@@ -148,7 +90,6 @@ body {
     object-fit: cover;
     filter: blur(10px);
     filter: brightness(0.5);
-    /* margin-bottom: -760px; */
     margin-bottom: -56.3%;
     filter: contrast(200%);
 }
@@ -157,41 +98,43 @@ body {
     filter: hue-rotate(10deg) brightness(1);
 }
 
-
-.montanhas {
-    display: flex;
-    position: relative;
-    user-select: none;
-    /* width: 50vw; */
-    z-index: 1;
-    /* top: 100vh; */
-    top: -94vh;
-    /* height: 100%; */
-    /* height: 100vh; */
-    /* width: 100%; */
-    filter: contrast(125%);
-    filter: brightness(0.8);
-    filter: blur(5px);
-    /* margin-bottom: -620px; */
-}
-
 .spanMontanha {
     display: flex;
     user-select: none;
 }
 
+#montanha1,
+#montanha2,
 #coqueiro1,
 #coqueiro2 {
     display: flex;
     user-select: none;
     position: relative;
     z-index: 1;
-    /* top: 100px; */
     top: -75vh;
-    height: 1000px;
     filter: contrast(125%);
     filter: brightness(0.8);
     filter: blur(5px);
+}
+
+#montanha1,
+#montanha2 {
+    height: 100%;
+}
+
+#montanha1 {
+    left: -875px;
+    bottom: -50px;
+}
+
+#montanha2 {
+    left: calc(-1638px + 100vw);
+    bottom: -100px;
+}
+
+#coqueiro1,
+#coqueiro2 {
+    height: 1000px;
 }
 
 #coqueiro1 {
@@ -200,63 +143,93 @@ body {
 
 #coqueiro2 {
     transform: scaleX(-1);
-    right: -210px;
+    left: calc(-1134px + 100vw);
 }
 
-#montanha1,
-#montanha2 {
-    display: flex;
-    user-select: none;
-    position: relative;
+.desfoco {
+    border-radius: 20px;
+    border: 1px solid rgba(255, 255, 255, 0.212);
+
     z-index: 1;
-    /* top: 100px; */
-    top: -75vh;
-    height: 100%;
-    filter: contrast(125%);
-    filter: brightness(0.8);
-    filter: blur(5px);
+    position: absolute;
+    display: flex;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 70%;
+    height: 400px;
+    margin: auto;
+    margin-top: 20vh;
+    padding: 10px;
 }
 
-#montanha1 {
-    /* z-index: 1; */
-    left: -875px;
-    bottom: -50px;
-}
-
-#montanha2 {
-    /* z-index: 1; */
-    right: 320px;
-    bottom: -100px;
+.comeco {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    width: 100%;
 }
 
 .apresentacao {
     display: flex;
+    flex-direction: column;
     margin: auto;
     align-items: center;
+    width: 90%;
     max-width: 1000px;
     padding: 0px 50px;
 }
 
-.escritoApresentacao h1 {
+.imagemMinhaContainer {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.imagemTituloNome {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+
+#imagemMinha {
+    max-width: 140px;
+    /* margin: 40px 40px 20px 0px; */
+    border-radius: 50%;
+    /* animation: sobeDesce 1.05s infinite alternate; */
+}
+
+.nomeTitulo {
+    display: flex;
+    flex-direction: column;
+    /* justify-self: end; */
+}
+
+.apresentacao h1 {
     font-size: 36px;
     margin-bottom: 40px;
     font-family: Verdana, Ubuntu, sans-serif;
 }
 
-.escritoApresentacao h4,
+.apresentacao h4,
 #descricao {
     margin: 10px 0;
     font-family: Verdana, Ubuntu, sans-serif;
 }
 
-#descricao {
-    font-size: 16px;
-    font-weight: lighter;
-    text-align: justify;
+.apresentacao h4 {
+    font-size: 24px;
 }
 
-.escritoApresentacao h4 {
-    font-size: 1.5rem;
+#descricao {
+    font-size: 20px;
+    font-weight: lighter;
+    text-align: justify;
+    width: 100%;
 }
 
 .apresentacao a {
@@ -302,7 +275,6 @@ body {
 }
 
 .tituloSubtituloHabilidade {
-    /* display: block; */
     justify-content: center;
 }
 
@@ -330,8 +302,6 @@ body {
     position: fixed;
     width: 110vw;
     left: -20px;
-    /* top: 10px; */
-    /* height: auto; */
     z-index: -1000;
 }
 
@@ -343,13 +313,11 @@ body {
 }
 
 .iconesHabilidades button {
-    /* margin-left: 15px; */
     border-radius: 100%;
     width: 110px;
     height: 110px;
     cursor: pointer;
     backdrop-filter: blur(13.5px);
-    /* filter: saturate(0.4); */
     -webkit-backdrop-filter: blur(13.5px);
 }
 
@@ -358,33 +326,23 @@ body {
 }
 
 .iconesHabilidades button img {
-    /* max-width: 80px; */
     display: flex;
     margin: auto;
     width: 60%;
     max-height: 80%;
-    /* width: calc(70% - 20px); */
     clear: both;
-}
-
-.iconesHabilidades button h2 {
-    display: flex;
-    justify-content: center;
-    font-size: 15px;
-    font-family: sans-serif;
 }
 
 .descricaoHabilidade {
     width: 50%;
 }
 
-
 .infoHabilidade {
     border-radius: 30px;
     border: 1px rgb(146, 146, 146) solid;
     margin: auto;
-    width: 90%;
-    min-height: 18rem;
+    width: 100%;
+    min-height: 100%;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -458,39 +416,44 @@ td a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: rgba(0, 0, 0, 0.219); */
+    justify-content: center;
 }
 
 #tituloProjetos {
     display: flex;
     justify-content: center;
     padding-bottom: 70px;
-    /* margin: 40px 0; */
 }
 
 .campoProjetos {
     min-height: 500px;
-    width: 90%;
+    width: 100vw;
     display: grid;
-    /* float: inline-start; */
-    /* float: inline-start; */
     grid-template-columns: repeat(2, 50%);
-    gap: 20px;
-    padding-left: 30px;
+    /* gap: 20px; */
+    margin-left: -15px;
+    justify-content: center;
+    /* align-items: center; */
+    /* padding-left: 30px; */
 }
 
 .campoProjetos .cadaProjeto {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    width: 40vw;
+    /* justify-content: center; */
+    /* align-items: center; */
+
+    /* width: 40vw; */
+    width: 90%;
+    margin: 0 auto 30px auto;
+
     height: auto;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
     border-radius: 40px;
 }
 
 .campoProjetos .cadaProjeto img {
-    width: 30vw;
+    width: 60%;
 }
 
 .campoProjetos .cadaProjeto p {
