--- a/style/light.css
+++ b/style/light.css
@@ -38,6 +38,23 @@ body {
     transform: rotate(90deg) translate(-50%, 50%) scale(1.1);
 }
 
+.sidebar {
+    /* background-color: rgba(10, 10, 34, 0.658);
+    box-shadow: 0 8px 32px 0 rgba(31, 41, 177, 0.644);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px); */
+
+    background-color: rgba(255, 255, 255, 0.568);
+    /* background-color: rgba(255, 0, 0, 0.568); */
+    box-shadow: 0 8px 32px 0 rgba(197, 18, 18, 0.521);
+    backdrop-filter: blur(14.5px);
+    -webkit-backdrop-filter: blur(14.5px);
+}
+
+#sidebar a {
+    color: black;
+}
+
 .navegacao a {
     color: black;
 }
@@ -172,7 +189,7 @@ td #restApiImagem {
     color: black;
     font-weight: 800;
     text-shadow: 0px 0px 10px rgba(255, 0, 0, 0.164);
-    /* text-decoration: underline 3px; */
+    text-decoration: underline 3px;
 }
 
 .riscoDosProjetos {
