--- a/style/allStyles.css
+++ b/style/allStyles.css
@@ -14,6 +14,8 @@ body {
     width: 100%;
 }
 
+/* Navegação */
+
 .topo {
     position: fixed;
     z-index: 1000;
@@ -67,16 +69,28 @@ body {
     transform: translate(-50%, -50%);
 }
 
+
+/* Container de apresentação */
+
 .inicioImagem {
     overflow: hidden;
-    /* height: 100vh; */
+    min-height: 100vh;
 }
 
-.imagemDeFundo {
-    display: flex;
-    position: relative;
-    z-index: -1;
-    /* height: 100vh; */
+.imagemVaporWave {
+    background-image: url(../assets/carl-hodgson-vaporwaave-beder-project-2.jpg);
+    background-position: 43% 12%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #474747;
+    background-blend-mode: hard-light;
+}
+
+.imagemPredioVermelho {
+    background-image: url(../assets/sonder-quest-vaporwave-day.jpg);
+    background-position: 43% 12%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #imagemVaporwave,
@@ -98,9 +112,16 @@ body {
     filter: hue-rotate(10deg) brightness(1);
 }
 
+
+/* Sistema para tela grande em tema claro (coqueiro) e escuro (montanha) */
+
 .spanMontanha {
     display: flex;
     user-select: none;
+    height: 100vh;
+    width: 100vw;
+    margin: auto;
+    position: relative;
 }
 
 #montanha1,
@@ -111,7 +132,7 @@ body {
     user-select: none;
     position: relative;
     z-index: 1;
-    top: -75vh;
+    top: 20vh;
     filter: contrast(125%);
     filter: brightness(0.8);
     filter: blur(5px);
@@ -123,12 +144,14 @@ body {
 }
 
 #montanha1 {
-    left: -875px;
+    position: absolute;
+    right: 70vw;
     bottom: -50px;
 }
 
 #montanha2 {
-    left: calc(-1638px + 100vw);
+    position: absolute;
+    left: 72vw;
     bottom: -100px;
 }
 
@@ -138,13 +161,16 @@ body {
 }
 
 #coqueiro1 {
-    left: -265px;
+    left: -310px;
 }
 
 #coqueiro2 {
     transform: scaleX(-1);
     left: calc(-1134px + 100vw);
 }
+
+
+/* Dentro do container de apresentação */
 
 .desfoco {
     border-radius: 20px;
@@ -156,7 +182,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    width: 70%;
+    width: 72%;
     height: 400px;
     margin: auto;
     margin-top: 20vh;
@@ -181,11 +207,55 @@ body {
     padding: 0px 50px;
 }
 
+/* Animação para girar o contorno colorido */
+@keyframes rotate {
+    100% {
+        transform: rotate(1turn);
+    }
+}
+
 .imagemMinhaContainer {
+    max-width: 150px;
+    max-height: 150px;
     width: 30%;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+/* contorno colorido atrás da minha foto */
+.circuloAnimado {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    z-index: -1;
+    border-radius: 50%;
+    padding: 10px;
+    animation: rotate 4s linear infinite;
+}
+
+.circuloAnimado:before {
+    /* https://alvarotrigo.com/shadow-gradients/ */
+    content: "";
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    transition: opacity 0.3s;
+    border-radius: 100%
+}
+
+#imagemMinha {
+    animation: none;
+    max-width: 140px;
+    max-height: 140px;
+    border-radius: 50%;
 }
 
 .imagemTituloNome {
@@ -195,18 +265,9 @@ body {
     justify-content: space-around;
 }
 
-
-#imagemMinha {
-    max-width: 140px;
-    /* margin: 40px 40px 20px 0px; */
-    border-radius: 50%;
-    /* animation: sobeDesce 1.05s infinite alternate; */
-}
-
 .nomeTitulo {
     display: flex;
     flex-direction: column;
-    /* justify-self: end; */
 }
 
 .apresentacao h1 {
@@ -267,6 +328,9 @@ body {
     margin-right: 10px;
 }
 
+
+/* Container de Habilidades */
+
 .habilidade {
     padding-top: 25px;
     display: flex;
@@ -274,15 +338,16 @@ body {
     position: relative;
 }
 
-.tituloSubtituloHabilidade {
+.tituloSubtituloHabCerPro {
     justify-content: center;
 }
 
-.tituloSubtituloHabilidade h1,
-.tituloSubtituloHabilidade p {
+.tituloSubtituloHabCerPro h1,
+.tituloSubtituloHabCerPro p {
     display: flex;
     justify-content: center;
     margin: 40px 0;
+    text-align: center;
 }
 
 
@@ -366,6 +431,9 @@ body {
     font-weight: 300;
 }
 
+
+/* Container de certificados */
+
 .certificados {
     padding-top: 40px;
     padding-bottom: 80px;
@@ -409,6 +477,9 @@ td a {
     max-height: 32px;
 }
 
+
+/* Container de Projetos */
+
 .projetos {
     width: 100vw;
     padding-bottom: 50px;
@@ -419,36 +490,21 @@ td a {
     justify-content: center;
 }
 
-#tituloProjetos {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 70px;
-}
-
 .campoProjetos {
     min-height: 500px;
     width: 100vw;
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    /* gap: 20px; */
     margin-left: -15px;
     justify-content: center;
-    /* align-items: center; */
-    /* padding-left: 30px; */
 }
 
 .campoProjetos .cadaProjeto {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
-
-    /* width: 40vw; */
     width: 90%;
     margin: 0 auto 30px auto;
-
     height: auto;
-    /* margin-bottom: 30px; */
     border-radius: 40px;
 }
 
@@ -481,4 +537,76 @@ td a {
     border: 0;
     height: 2px;
     width: 100%;
+}
+
+
+/* Container de contato */
+.campoContato {
+    padding: 40px 0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.email {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.copiarEmail {
+    cursor: pointer;
+    padding: 10px;
+    color: black;
+    background-color: lightgray;
+    width: 300px;
+    text-align: center;
+    border-radius: 17px;
+    margin-left: 20px;
+
+    display: flex;
+    /* Para centralizar o parágrafo */
+    text-align: center;
+    /* Para centralizar horizontalmente o icone e o texto */
+    justify-content: center;
+    /* Para centralizar verticalmente o texto com o ícone */
+    align-items: center;
+}
+
+.copiarEmail span img {
+    height: 20px;
+    padding-left: 10px;
+}
+
+.copiarEmail:hover {
+    background-color: rgb(200, 199, 255);
+}
+
+.whatsapp {
+    background-color: rgb(104, 255, 74);
+    border-radius: 17px;
+    width: 350px;
+    /* Para centralizar o parágrafo */
+    text-align: center;
+    /* Para centralizar horizontalmente o icone e o texto */
+    justify-content: center;
+    /* Para centralizar verticalmente o texto com o ícone */
+    align-items: center;
+
+    display: flex;
+    cursor: pointer;
+    padding: 10px;
+    text-decoration: none;
+    color: black;
+    margin: 0 auto 20px;
+}
+
+.whatsapp:hover {
+    background-color: rgb(87, 209, 62);
+}
+
+.whatsapp span img {
+    height: 30px;
+    padding-right: 10px;
 }
