--- a/style/light.css
+++ b/style/light.css
@@ -96,6 +96,10 @@ body {
     color: black;
 }
 
+.circuloAnimado::before {
+    background: linear-gradient(-45deg, rgb(255, 0, 0) 0%, rgb(255, 165, 165) 100%);
+}
+
 .linksExternos a {
     color: rgb(0, 0, 0);
     background-color: rgba(197, 18, 18, 0.521);
@@ -115,7 +119,6 @@ body {
 
 
 #imagemFundoHabilidades {
-    /* background: linear-gradient(135deg, rgb(255, 230, 230) 20%, rgb(255, 239, 239), rgb(255, 197, 197)); */
     background: white;
 }
 
@@ -123,12 +126,10 @@ body {
     border: 2px rgb(128, 128, 128) solid;
     background-color: rgba(255, 0, 0, 0.021);
     backdrop-filter: brightness(2);
-    /* box-shadow: 0 0px 16px 0 rgba(180, 27, 27, 0.521); */
 }
 
 .iconesHabilidades button:hover {
     background-color: rgba(218, 218, 218, 0.781);
-    /* box-shadow: 2px 2px 24px 0 rgba(173, 27, 27, 0.37); */
 }
 
 .iconesHabilidades button h2 {
@@ -137,9 +138,6 @@ body {
 
 .infoHabilidade {
     box-shadow: 10px 10px 32px 0 rgba(150, 29, 29, 0.678);
-    /* backdrop-filter: blur(13.5px); */
-    /* filter: brightness(1.2) contrast(1.25) saturate(1.2); */
-    /* -webkit-backdrop-filter: blur(13.5px) contrast(1.25) saturate(1.2); */
 }
 
 .conteinerCertificadoUnico,
