--- a/style/dark.css
+++ b/style/dark.css
@@ -192,3 +192,28 @@ td span {
     filter: drop-shadow(0px 0px 100px rgba(98, 156, 189, 0.658));
     box-shadow: 0px 0px 15px rgba(98, 156, 189, 0.658);
 }
+
+
+/* Container de contato */
+.email h4 span img {
+    filter: invert();
+}
+
+.copiarEmail {
+    color: black;
+    background-color: lightgray;
+}
+
+.copiarEmail:hover {
+    background-color: rgb(39, 255, 237);
+    box-shadow: 7px 7px 13px 0 rgba(0, 0, 0, 0.377);
+}
+
+.whatsapp {
+    background-color: rgb(75, 255, 39);
+    color: black;
+}
+
+.whatsapp:hover {
+    background-color: rgb(32, 182, 1);
+}
